[package]
name = "Jack-compiler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"
once_cell = "1.21.3"
clap = { version = "4.5.17", features = ["derive"] }
itertools = "0.14.0"

serde = { version = "1.0", features = ["derive"], optional = true }
quick-xml = { version = "0.38.3", features = ["serialize"], optional = true }

[features]
xml = ["quick-xml", "serde"]
